# 2025-rust-scientific-computing

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.tex  references.bib
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: code.md  paper-crate.md  paper-other.md
.github/workflows/: book.yml  build.yml  test.yml
book/: book.toml
book/src/: SUMMARY.md  conferences.md  literature.bib  other_links.md
book/src/applications/: index.md
book/src/libraries/: array_linear_algebra.md  bindings_interop.md  gpu.md  index.md  machine_learning.md  mathematics.md  ode_pde_solvers.md  optimization.md  other.md  parallel_computing.md  plotting.md
book/src/render/: cite_key.hbs
crate-info-puller/: Cargo.toml
crate-info-puller/crate-lists/: all.txt
crate-info-puller/src/: deplist.rs  growth.rs  lib.rs  main.rs  tabular.rs
figures/: crates-io-dep-scatter.py  crates-io-release-numbers.py  pypi-org-used-languages.py  stackoverflow-desired-language.py  stackoverflow-popular-languages.py
joss-info-puller/: Cargo.toml  README.md
joss-info-puller/src/: main.rs
paper/: Makefile  main.tex  references.bib
