[package]
name = "crate-info-puller"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-std = { version = "1.13.2", features = ["attributes", "tokio1"] }
chrono = { version = "0.4.41", features = ["alloc"] }
crates_io_api-wasm-patch = "0.12.1"
itertools = "0.14.0"
reqwest = "0.12.23"
web-time = "1.1.0"
