[package]
name = "crate-info-puller"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tabular"
path = "src/tabular.rs"

[[bin]]
name = "growth"
path = "src/growth.rs"

[dependencies]
anyhow = "1.0.99"
async-compat = "0.2.5"
chrono = { version = "0.4.41", features = ["alloc"] }
clap = { version = "4.5.45", features = ["derive", "wrap_help"] }
crates_io_api-wasm-patch = "0.12.1"
futures = "0.3.31"
itertools = "0.14.0"
macro_rules_attribute = "0.2.2"
reqwest = "0.12.23"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
smol = "2.0.2"
smol-macros = "0.1.1"
web-time = "1.1.0"
